--- a/Pages/Bio.html
+++ b/Pages/Bio.html
@@ -14,7 +14,7 @@
 </body>
 <!-- <script defer type="module" src="../js/init-firebase.js"></script> -->
 <script type="module">
-    import { app } from "../js/init-firebase.js"
+    import { app } from "../script/init-firebase.js"
     import { getAuth, updateProfile } from "https://www.gstatic.com/firebasejs/11.0.1/firebase-auth.js"
 
     const auth = getAuth(app);
