--- a/Pages/Bio.html
+++ b/Pages/Bio.html
@@ -17,7 +17,7 @@
     <div class="main">
         <div class="header">
             <div id="profile-picture">
-                <img src="https://pub-b0a9bdcea1cd4f6ca28d98f878366466.r2.dev/1731293754064" alt="Profile picture">
+                <img src="https://pub-b0a9bdcea1cd4f6ca28d98f878366466.r2.dev/1731409378952-grass.jpg" alt="Profile picture">
                 <div>
                     <label for="file">✏️</label>
                     <input type="file" accept="image/*" id="file" style="visibility: hidden; width: 0; height: 0;" />
@@ -52,7 +52,7 @@
         <div class="edit">
             <button type="button" id="change">Edit profile</button>
         </div>
-        
+
         <!-- <ul class="nav nav-tabs" id="myTab" role="tablist">
             <li class="nav-item" role="presentation">
                 <button class="nav-link active" id="home-tab" data-bs-toggle="tab" data-bs-target="#home" type="button"
@@ -69,7 +69,7 @@
             <div class="tab-pane fade" id="profile" role="tabpanel" aria-labelledby="profile-tab">Profile</div>
             <div class="tab-pane fade" id="contact" role="tabpanel" aria-labelledby="contact-tab">Contact</div>
         </div> -->
-        
+
         <div class="profile">
             <div class="divider">
                 <span>Recent posts</span>
@@ -98,7 +98,7 @@
         </div>
         <button type="button" id="fetch">Fetch user info</button>
         <pre id="output">No fetch yet</pre>
-    </div>
+   </div>
 </body>
 <!-- <script defer type="module" src="../js/init-firebase.js"></script> -->
 <script type="module">
@@ -129,8 +129,30 @@
     });
 
     const changeInfo = async () => {
+        const imageChanged = document.querySelector("#profile-picture img").src.startsWith("data:") ? true : false
+
+
+        console.log("New image link:", document.querySelector("#profile-picture img").src)
+        const base64String = document.querySelector("#profile-picture img").src.split(',')[1];
+        const binaryString = atob(base64String);
+        const len = binaryString.length;
+        const bytes = new Uint8Array(len);
+        for (let i = 0; i < len; i++) {
+            bytes[i] = binaryString.charCodeAt(i);
+        }
+        const blob = new Blob([bytes], { type: 'image/png' });
+        const formData = new FormData();
+        formData.append('file', blob, 'profile.png');
+
+        const response = await fetch('https://flow-express-js.onrender.com/upload', {
+            method: 'POST',
+            body: formData
+        });
+
+        const result = await response.json();
+        console.log("Uploaded filename:", result.filename);
         updateProfile(auth.currentUser, {
-            photoURL: document.querySelector("#profile-picture").src,
+            photoURL: result.filename,
         }).then(() => {
             // Profile updated!
             console.log("Profile updated!")
