--- a/Pages/Bio.html
+++ b/Pages/Bio.html
@@ -14,7 +14,16 @@
     <link rel="icon" type="image/x-icon" href="../images/favicon.svg">
     <link rel="stylesheet" href="../css/navigation-bar.css">
     <link rel="stylesheet" href="../css/page-header.css">
-    <title>Tran Nguyen Phuc Khang</title>
+    <title>Tran Nguyen Phuc Khang (@phkhang) • flow</title>
+    <style>
+        .button {
+            transition: all 0.3s ease;
+        }
+
+        .button:active {
+            transform: scale(0.9);
+        }
+    </style>
 </head>
 
 <body style="margin-bottom: 5rem;">
